added s3 bucket code to add document api
